--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc --noEmit",
     "watch": "tsc -w",
+    "deploy": "cdk deploy",
     "test": "export TESTING=true && jest",
     "cdk": "cdk"
   },
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.122.0",
+    "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1558.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
