--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "aws-cdk-lib": "2.122.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1558.0",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
+    "constructs": "^10.0.0"
   }
 }
